--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
+    "redux-dynamic-middlewares": "^2.0.0",
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
@@ -82,7 +83,8 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
     "typescript": "^4.0.3",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "browserslist": [
     "defaults"
