--- a/package.json
+++ b/package.json
@@ -125,5 +125,13 @@
   "bugs": {
     "url": "https://github.com/RecordReplay/devtools/issues"
   },
-  "homepage": "https://github.com/RecordReplay/devtools#readme"
+  "homepage": "https://github.com/RecordReplay/devtools#readme",
+  "bundlewatch": {
+    "files": [
+      {
+        "path": "dist/*.js",
+        "maxSize": "100kB"
+      }
+    ]
+  }
 }
